Fix #5 - Add spacing between links in nav
Fixed by adding top and bottom margins to <li>.

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -194,3 +194,8 @@ dt {
 dd {
     margin-bottom: 1rem;
 }
+
+li {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
